# Chat-MBTI

./: .env.example  .gitignore  FLUTTER_WEB_BUILD_FIXED.md  LICENSE  README.md  UI_HISTORY_RESTORE_IMPROVEMENT.md  docker-compose.yaml
.github/: DEPLOYMENT.md  copilot-instructions.md
diagnosis-ai-api/: .gitignore  CLOUDBUILD_SETUP.md  Dockerfile  README.md  __init__.py  app.py  cloudbuild.yaml  cost-monitor.sh  docker-compose.yaml  langgraph_architecture_redesign.md  pyproject.toml  test_element_switching.py  test_initial_questions.py  test_undo_workflow.py  エラーハンドリングレビューレポート.md
diagnosis-ai-api/api/: app.py  router.py
diagnosis-ai-api/config/: element.yaml
diagnosis-ai-api/deploy/: create-db-users.sh  setup-cloudbuild.sh
diagnosis-ai-api/docs/: ERROR_HANDLING_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  NEW_ARCHITECTURE_README.md  langgraph_architecture_redesign.md
diagnosis-ai-api/src/: di_container.py  type.py
diagnosis-ai-api/src/api/: app.py  router.py
diagnosis-ai-api/src/controller/: __init__.py  generate_qa.py  mbti_controller.py  mbti_routes.py  type.py
diagnosis-ai-api/src/driver/: auth.py  checkpointer_factory.py  db.py  env.py  gcs.py  langgraph_driver.py  model.py
diagnosis-ai-api/src/gateway/: llm_gateway.py  repository_gateway.py  workflow_gateway.py
diagnosis-ai-api/src/port/: __init__.py  ports.py
diagnosis-ai-api/src/usecase/: __init__.py  data_collection_service.py  mbti_conversation_service.py  prompt.py  type.py  utils.py
diagnosis-ai-api/src/usecase/generate_qa/: __init__.py  graph.py  model.py  prompt.py  type.py  utils.py
diagnosis-ai-api/terraform/: billing-alerts.tf  cloud_run.tf  cloud_sql.tf  cloudbuild.tf  cloudbuild_simple.tf  cloudbuild_trigger.tf  main.tf  outputs.tf  sercret_manager.tf  terraform.tfvars  variables.tf
diagnosis-ai-api/terraform/yaml/: cloudbuild.yaml
diagnosis-ai-api/tests/: conftest.py  test_api_error_handling.py  test_db.py  test_element_switching.py  test_error_handling.py  test_initial_questions.py  test_integration.py  test_langgraph_driver.py  test_mbti_controller.py  test_mbti_service.py  test_utils.py  test_workflow_gateway.py
diagnosis-chat-api/: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml
diagnosis-chat-api/config/: element.yaml
diagnosis-chat-api/deploy/: create-db-users.sh  deploy.sh  setup-cloudbuild.sh
diagnosis-chat-api/docs/: ERROR_HANDLING_IMPLEMENTATION_COMPLETE.md  architecture_proposal.md  langgraph_architecture_redesign.md
diagnosis-chat-api/notebook/: chatbot_v0.ipynb
diagnosis-chat-api/scripts/: db_monitor.sh
diagnosis-chat-api/src/: exceptions.py  router.py
diagnosis-chat-api/src/controller/: mbti_controller.py
diagnosis-chat-api/src/driver/: auth.py  db.py  env.py  langgraph_driver.py  model.py
diagnosis-chat-api/src/gateway/: repository_gateway.py  workflow_gateway.py
diagnosis-chat-api/src/port/: ports.py
diagnosis-chat-api/src/usecase/: data_collection_service.py  mbti_conversation_service.py  prompt.py
diagnosis-chat-api/tests/: test_api_error_handling.py  test_controller_error_handling.py  test_db.py  test_error_handling_integration.py  test_initial_questions.py  test_integration.py  test_langgraph_driver.py  test_undo_endpoint.py
diagnosis-summary-api/: .dockerignore  .gitignore  Dockerfile  config.yaml  demo_messages.txt  pyproject.toml  run.ipynb  run_test.sh
diagnosis-summary-api/data/: Shonosuke Sugasawa_energy.csv
diagnosis-summary-api/scripts/: create_message_request.ipynb  download_models.py
diagnosis-summary-api/src/: app.py  gpu_model_manager_vllm.py  main.py  utils.py
flutter_ui/: .dockerignore  Dockerfile  FIREBASE_HOSTING_SETUP.md  README.md  firebase.json  pubspec.yaml
frontend/: .firebaserc  .gitignore  Dockerfile  README.md  firebase.json  pubspec.yaml
terraform/: .gitignore  Makefile  (+10 more)
(+53 files in other folders)
