[project]
name = "chat-mbti-result"
version = "0.1.0"
description = ""
authors = [
    {name = "oh80",email = "ogawa.hajime.hyr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10.5,<4.0"
dependencies = [
    "langchain[google-genai] (>=0.3.25,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "accelerate (==1.1.1)",
    "google-cloud-storage (>=3.1.1,<4.0.0)",
    "gcsfs>=2025.3.0",
    "bitsandbytes>=0.46.0 ; sys_platform == 'linux'",
    "vllm>=0.8.5.post1 ; sys_platform == 'linux'",
    "transformers[sentencepiece,torch]>=4.52.4",
]

[project.dev-dependencies]
dev = [
    "datasets (>=3.6.0,<4.0.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "huggingface-hub[hf-transfer]>=0.33.0",
]
